tests/neg-custom-args/deprecation/t3235-minimal-v3.scala
object Test {
  def main(args: Array[String]): Unit = {
    assert(1234567890123456789L.round == 1234567890123456789L) // error
  }
}
